# nature-watch

./: .env.example  .gitignore  README.md  config.yaml  nature-watch.service  pyproject.toml  requirements.txt  sandbox.txt
docs/: cost-analysis.md  video_classification.md
src/: camera.py  config.py  health.py  main.py  motion.py  rate_limiter.py  recorder.py  snap.py  uploader.py  viewer.py
