[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nature-watch"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "opencv-python-headless>=4.9",
    "boto3>=1.34",
    "PyYAML>=6.0",
]

[project.scripts]
nature-watch = "src.main:main"
nature-watch-snap = "src.snap:snap"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
